--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: affyPLM
-Version: 0.99-0
-Date: 2003-09-26
-Title: affyPLM
+Version: 0.99-1
+Date: 2003-10-07
+Title: affyPLM - Probe Level Models
 Author: Ben Bolstad <bolstad@stat.berkeley.edu>
 Maintainer: Ben Bolstad <bolstad@stat.berkeley.edu>
 Depends: R (>= 1.8.0), affy (>= 1.3.12)
