--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: affyPLM
-Version: 0.99-1
-Date: 2003-10-07
+Version: 0.99-2
+Date: 2003-10-09
 Title: affyPLM - Probe Level Models
 Author: Ben Bolstad <bolstad@stat.berkeley.edu>
 Maintainer: Ben Bolstad <bolstad@stat.berkeley.edu>
-Depends: R (>= 1.8.0), affy (>= 1.3.12)
+Depends: R (>= 1.8.0), affy (>= 1.3.20), affydata
 Description: A package for fitting Probe Level Models.
 License: GPL version 2 or newer
 URL: http://www.stat.berkeley.edu/users/bolstad/AffyExtensions
