--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: affyPLM
-Version: 1.1.0
+Version: 1.1.1
 Date: 2004-01-12
 Title: affyPLM - Probe Level Models
 Author: Ben Bolstad <bolstad@stat.berkeley.edu>
@@ -8,4 +8,4 @@ Depends: R (>= 1.8.0), affy (>= 1.3.26), affydata
 Description: A package for fitting Probe Level Models.
 License: GPL version 2 or newer
 URL: http://www.stat.berkeley.edu/users/bolstad/AffyExtensions
-Collate:  LESN.R PLMset.R fitPLM.R normalize.exprSet.R normalize.scaling.R quantile_extensions.R threestep.R PLMSet2exprSet.R rmaPLM.R threestepPLM.R init_fns.R
+Collate:  LESN.R PLMset.R fitPLM.R normalize.exprSet.R normalize.scaling.R quantile_extensions.R threestep.R PLMSet2exprSet.R rmaPLM.R init_fns.R threestepPLM.R
