--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: affyPLM
-Version: 1.2.7
-Date: 2005-1-28
-Title: affyPLM - Probe Level Models
+Version: 1.3.0
+Date: 2005-5-25
+Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bolstad@stat.berkeley.edu>
 Maintainer: Ben Bolstad <bolstad@stat.berkeley.edu>
-Depends: R (>= 1.9.0), affy (>= 1.4.24), affydata
-Description: A package for fitting Probe Level Models.
+Depends: R (>= 2.0.0), affy (>= 1.5.0), gcrma
+Description: A package that extends and improves the functionality of the base affy package. Routines that make heavy use of compiled code for speed. Central focus is on implementation of methods for fitting probe-level models and tools using these models. PLM based quality assessment tools.
 License: GPL version 2 or newer
 URL: http://www.stat.berkeley.edu/users/bolstad/AffyExtensions
-Collate:  LESN.R PLMset.R  internalfunctions.R fitPLM.R normalize.exprSet.R normalize.scaling.R quantile_extensions.R threestep.R PLMSet2exprSet.R rmaPLM.R  threestepPLM.R init_fns.R
-
