bmb - added a biocViews line to description
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@13943 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,4 @@ Description: A package that extends and improves the functionality of
         models. PLM based quality assessment tools.
 License: GPL version 2 or newer
 URL: http://www.stat.berkeley.edu/users/bolstad/AffyExtensions
-
+biocViews: Microarray, OneChannel, Preprocessing, QualityControl
