--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: affyPLM
-Version: 1.4.3
+Version: 1.4.4
 Date: 2005-9-18
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bolstad@stat.berkeley.edu>
 Maintainer: Ben Bolstad <bolstad@stat.berkeley.edu>
-Depends: R (>= 2.0.0), affy (>= 1.5.0), gcrma
+Depends: R (>= 2.0.0), affy (>= 1.5.0), affydata, Biobase, methods, gcrma
 Description: A package that extends and improves the functionality of
         the base affy package. Routines that make heavy use of
         compiled code for speed. Central focus is on implementation of
@@ -13,3 +13,4 @@ Description: A package that extends and improves the functionality of
 License: GPL version 2 or newer
 URL: http://www.stat.berkeley.edu/users/bolstad/AffyExtensions
 biocViews: Microarray, OneChannel, Preprocessing, QualityControl
+SaveImage: yes
