SaveImage is deprecated, using LazyLoad instead
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@24616 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,4 @@ Description: A package that extends and improves the functionality of
 License: GPL version 2 or newer
 URL: http://bmbolstad.com
 biocViews: Microarray, OneChannel, Preprocessing, QualityControl
-SaveImage: yes
+LazyLoad: yes
