--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: affyPLM
-Version: 1.13.6
-Date: 2007-06-22
+Version: 1.13.7
+Date: 2007-08-22
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
-Depends: R (>= 2.5.0), affy (>= 1.11.0), affydata, Biobase, methods, gcrma, stats, preprocessCore
+Depends: R (>= 2.5.0), affy (>= 1.11.0), Biobase, methods, gcrma, stats, preprocessCore
+Suggests: affydata
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
         the base affy package. Routines that make heavy use of
