--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: affyPLM
-Version: 1.13.11
-Date: 2007-09-09
+Version: 1.13.12
+Date: 2007-09-11
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
-Depends: R (>= 2.5.0), affy (>= 1.11.0), Biobase, methods, gcrma, stats, preprocessCore
+Depends: R (>= 2.5.0), affy (>= 1.11.0), Biobase, methods, gcrma, stats, preprocessCore (>= 0.99.15)
 Suggests: affydata
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
