At various places in affyPLM, the function 'geneNames' is used, but so far has not been imported, and I assume that was simply an inadvertent omission.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@51878 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importClassesFrom(methods,
   importFrom("Biobase", "phenoData")
   importFrom("Biobase", "sampleNames<-")
   importFrom("Biobase", "sampleNames")
+  importFrom("Biobase", "geneNames")
 
   importFrom("graphics", "hist")
   importFrom("affy","normalize")
