--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: affyPLM
-Version: 1.29.1
+Version: 1.29.2
 Date: 2011-02-06
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
 Depends: R (>= 2.6.0), affy (>= 1.11.0), Biobase, methods, gcrma, stats, preprocessCore (>= 1.5.1)
+Imports: zlibbioc
 Suggests: affydata
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
