Added 'import(methods)' to NAMESPACE.  (without that, isGeneric, setMethod etc. were not found)
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@58352 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,7 @@
 useDynLib("affyPLM")
 
 import(zlibbioc)
-
-importClassesFrom(methods,
-                  ANY,
-                  character,
-                  environment,
-                  integer,
-                  matrix,
-                  missing,
-                  numeric)
+import(methods)
 
 importFrom("Biobase", "annotation", "description", "experimentData")
 importFrom("Biobase", "pData", "pData<-")
