--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: affyPLM
-Version: 1.31.0
+Version: 1.31.1
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
 Depends: R (>= 2.6.0), affy (>= 1.11.0), Biobase, gcrma, stats, preprocessCore (>= 1.5.1)
 Imports: zlibbioc, methods
-Suggests: affydata
+Suggests: affydata, MASS
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
         the base affy package. Routines that make heavy use of
