Add missing dep hgu95av2cdf to Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: affyPLM
-Version: 1.77.1
+Version: 1.77.2
 Title: Methods for fitting probe-level models
 Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
 Depends: R (>= 2.6.0), BiocGenerics (>= 0.3.2), affy (>= 1.11.0), 
          Biobase (>= 2.17.8), gcrma, stats, preprocessCore (>= 1.5.1)
 Imports: zlibbioc, graphics, grDevices, methods
-Suggests: affydata, MASS
+Suggests: affydata, MASS, hgu95av2cdf
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
         the base affy package. Routines that make heavy use of
