--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Author: Ben Bolstad <bmb@bmbolstad.com>
 Maintainer: Ben Bolstad <bmb@bmbolstad.com>
 Depends: R (>= 2.6.0), BiocGenerics (>= 0.3.2), affy (>= 1.11.0), 
          Biobase (>= 2.17.8), gcrma, stats, preprocessCore (>= 1.5.1)
-Imports: zlibbioc, graphics, grDevices, methods
+Imports: graphics, grDevices, methods
 Suggests: affydata, MASS, hgu95av2cdf
 LinkingTo: preprocessCore
 Description: A package that extends and improves the functionality of
